--- a/src/features/Navigation/Navigation.css
+++ b/src/features/Navigation/Navigation.css
@@ -2,8 +2,9 @@
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #333; /* Adjust as needed */
-    padding: 10px 0; /* Adjust padding as needed */
+    background-color: #0c3d63; /* Adjust as needed */
+    padding: 15px 0; /* Adjust padding as needed */
+    height: 1.5rem;
 }
 
 .navbar ul {
@@ -11,14 +12,47 @@
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .navbar ul li {
     padding: 0 20px; /* Adjust padding as needed */
+    font-size: 1.3rem;
+    display: flex;
+    position: relative;
 }
 
 .navbar ul li a {
-    color: #fff; /* Adjust link text color as needed */
+    color: lightblue; /* Adjust link text color as needed */
     text-decoration: none; /* Remove default underline */
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.tasks-icon {
+    color: aliceblue;
+}
+
+.shopping-icon {
+    color: #c25289;
+}
+
+.nav-text {
+    position: absolute;
+    top: 0;
+    left: 80%;
+    display: none;
+    margin-left: 5px; /* Adjust as needed */
+    transform: translateY(-10px); /* Move the text up initially */
+    transition: opacity 1s ease, transform 1s ease; /* Add transition effect for opacity and transform */
+    opacity: 0; /* Initially hidden */
+}
+
+.navbar ul li:hover .nav-text  {
+    display: flex;
+    opacity: 1; /* Show the text */
+    transform: translateY(0); /* Move the text back to its original position */
+}
+
