--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,8 @@
 
 .content {
   padding-top: 2rem; /* Adjust the value based on the height of your navigation bar */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
 }
