--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -2,7 +2,8 @@
     background-color: aliceblue;
     margin: 2rem 1rem;
     padding: 2rem 2rem;
-    font-family: Helvetica;
+    font-family: "Nunito", sans-serif;
     box-sizing: content-box;
+    border-radius: 3rem;
 }
 
