--- a/src/features/Tasks/Tasks.css
+++ b/src/features/Tasks/Tasks.css
@@ -2,31 +2,53 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 30%;
+    height: fit-content;
 }
 
 .date-box {
     margin-bottom: 1rem;
+    background-color: #135382;
+    padding: 1rem; /* Add padding for spacing */
+    text-align: center; /* Center align text */
+    border-radius: 2rem;
+    box-shadow: 0 2px 4px grey /* Add shadow */
+}
+
+.date-box h1 {
+    font-size: 2rem; /* Adjust font size */
+  font-weight: bold; /* Make the text bold */
+  color: aliceblue; /* Text color */
+  text-transform: uppercase; /* Convert text to uppercase */
+  margin: 0; /* Remove margin to avoid extra spacing */
+  /* Add any additional styling to make it creative */
+
 }
 
 .to-do-list {
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 70%;
 }
 
 .to-do-element {
     display: flex;
     margin-bottom: 1rem;
     justify-content: space-between;
-    border: 1px solid black;
-    background-color: lightblue;
+    width: 100%;
 }
 
 .to-do-list button {
     height: 3rem;
     cursor: pointer;
     border: none;
-    background-color: lightblue;
+    border-radius: 1rem;
+    background-color: #97c8ed;
+    width: 100%;
+    color: #135382;
+    box-shadow: 0 2px 4px grey;
+    font-family: "Nunito", sans-serif;
+    font-size: 1rem;
 }
 
 .to-do-list button:hover {
@@ -40,9 +62,13 @@
 }
 
 .add-task {
-    display: flex;
-    align-self: flex-end;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 20px;
+    margin-right: 20px;
 }
+
 .add-task button {
     display: flex;
     align-items: center;
@@ -66,10 +92,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Semi-transparent black overlay */
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Ensure it appears above other content */
+    z-index: 1000;
+    /* Ensure it appears above other content */
 }
+
 
