Implement delete tasks

--- a/src/features/Tasks/ViewTask/ViewTask.css
+++ b/src/features/Tasks/ViewTask/ViewTask.css
@@ -1,14 +1,23 @@
+.view-task-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.overlayed-container {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .edit-delete-buttons {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .edit-task-icon {
-    font-size: 1.2em;
+    font-size: 1.4em;
 }
 
 .delete-task-icon {
-    font-size: 1.3em;
+    font-size: 1.4em;
 }
 
 .edit-task, .delete-task {
@@ -18,6 +27,23 @@
 }
 
 .edit-delete-buttons button:hover {
-    color: pink;
+    color: lightblue;
 }
+
+.overlay-two {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    /* Semi-transparent black overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    /* Ensure it appears above other content */
+}
+
+
 
