--- a/src/features/Tasks/TaskForm/TaskForm.css
+++ b/src/features/Tasks/TaskForm/TaskForm.css
@@ -14,6 +14,14 @@
     flex-direction: column;
 }
 
+.close {
+    width: fit-content;
+    align-self: flex-end;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
 .basic, .reward {
     display: flex;
     flex-direction: column;
