--- a/src/features/Tasks/Tasks.css
+++ b/src/features/Tasks/Tasks.css
@@ -4,6 +4,7 @@
     align-items: center;
     width: 30%;
     height: fit-content;
+    margin-top: 4rem;
 }
 
 .date-box {
@@ -76,6 +77,7 @@
     color: lightblue;
     border: none;
     background-color: transparent;
+    cursor: pointer;
 }
 
 .edit-task-icon {
