--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,5 @@
 .card {
-    background-color: aliceblue;
+    background-color: #135382;
     margin: 2rem 1rem;
     padding: 2rem 2rem;
     font-family: "Nunito", sans-serif;
