--- a/src/features/Tasks/TaskForm/TaskForm.css
+++ b/src/features/Tasks/TaskForm/TaskForm.css
@@ -1,5 +1,5 @@
 .form-container {
-    background-color: white;
+    background-color: aliceblue;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
