--- a/src/features/Tasks/TaskItem/TaskItem.css
+++ b/src/features/Tasks/TaskItem/TaskItem.css
@@ -13,11 +13,19 @@
     height: 3rem;
     cursor: pointer;
     border: none;
-    border-radius: 1rem;
+    border-radius: .4rem;
     background-color: #97c8ed;
     width: 100%;
     color: #135382;
-    box-shadow: 0 2px 4px grey;
     font-family: "Nunito", sans-serif;
     font-size: 1rem;
+    background: linear-gradient(to bottom right, aliceblue, #97c8ed);
+    padding: 10px;
+   
+}
+
+
+.view-task:hover, .view-reward:hover {
+    font-size: 1.1rem;
+    color: #0c3d63;
 }
