--- a/src/features/Tasks/ViewTask/ViewTask.css
+++ b/src/features/Tasks/ViewTask/ViewTask.css
@@ -1,6 +1,7 @@
 .view-task-container, .view-rewards-container {
     display: flex;
     flex-direction: column;
+    padding: 1.5rem;
 }
 
 .overlayed-container {
