--- a/src/features/Rewards/RewardsPage.css
+++ b/src/features/Rewards/RewardsPage.css
@@ -13,7 +13,12 @@
 }
 
 .rewards-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
     margin-top: 0;
+    background-color: #135382;
 }
 
 .rewards-box h1 {
