--- a/src/features/Tasks/TaskForm/TaskForm.css
+++ b/src/features/Tasks/TaskForm/TaskForm.css
@@ -1,18 +1,20 @@
 .form-container {
     background-color: aliceblue;
     padding: 20px;
-    border-radius: 8px;
+    border-radius: .5rem;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
     display: flex;
     flex-direction: column;
-    width: 40%;
-    height: 60%;
+    width: 30%;
+    height: 40%;
 }
 
-.add-task-form {
+.form-container form {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
+
 
 .close {
     width: fit-content;
@@ -22,10 +24,13 @@
     cursor: pointer;
 }
 
-.basic, .reward {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.form-container label {
+    width: 70%;
+    text-align: start;
+}
+
+.form-container input {
+    margin-bottom: 1.5rem;
 }
 
 #notes, #task-name, #coin-reward, #item-name, #price, #description {
@@ -36,16 +41,13 @@
     box-sizing: border-box;
 }
 
-#notes {
-    margin-top: 1rem;
-}
 
 #coin-reward {
     margin-bottom: 1rem;
 }
 
 .submit-task-button {
-    width: 30%;
+    width: fit-content;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
