--- a/src/features/Tasks/TaskForm/TaskForm.css
+++ b/src/features/Tasks/TaskForm/TaskForm.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     width: 30%;
-    height: 40%;
+    height: fit-content;
 }
 
 .form-container form {
