--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.command-button {
+  border: none;
+  background-color: lightblue;
+  border-radius: 3rem;
+  padding: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+  min-width: 5rem;
+  width: fit-content;
+  align-self: center;
+}
