--- a/src/features/Inventory/RewardHistory/RewardHistory.css
+++ b/src/features/Inventory/RewardHistory/RewardHistory.css
@@ -1,3 +1,48 @@
 .rewards-history {
-    margin-top: 3rem;
+    margin-top: 1rem;
+    background-color: #135382;
+    color: lightblue
 }
+
+.inventory-history-box {
+    width: 85%;
+    display: flex;
+    align-items: center;
+    height: fit-content;
+    cursor: pointer;
+    border: none;
+    border-radius: .4rem;
+    background-color: #97c8ed;
+    width: 100%;
+    color: #135382;
+    font-family: "Nunito", sans-serif;
+    font-size: 1rem;
+    background: linear-gradient(to bottom right, aliceblue, #97c8ed);
+    padding: 10px;
+    margin-bottom: 1em;
+    justify-content: space-between;
+}
+
+.inventory-history-box img {
+    height: 2.5rem;
+    width: 2.5rem;
+}
+
+.inventory-history-box p {
+    margin: 0;
+    display: flex;
+}
+
+.history-container-1 {
+    display: flex;
+    align-items: center;
+}
+
+.history-container-2 {
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
