--- a/src/features/Inventory/InventoryPage.css
+++ b/src/features/Inventory/InventoryPage.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: fit-content;
     height: fit-content;
-    margin-top: 0;
+    margin-top: 2rem;
     background-color: #135382;
 }
 
