--- a/src/features/Rewards/RewardsPage.css
+++ b/src/features/Rewards/RewardsPage.css
@@ -1,6 +1,3 @@
-.rewards-container {
-    margin-top: 3rem;
-}
 
 .coin-count-header {
    
@@ -16,8 +13,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 30%;
     height: fit-content;
-    margin-top: 0;
+    margin-top: 2rem;
     background-color: #135382;
 }
 
