--- a/src/features/Tasks/TaskItem/TaskItem.css
+++ b/src/features/Tasks/TaskItem/TaskItem.css
@@ -1,13 +1,17 @@
 .to-do-element, .reward-item {
     display: flex;
     margin-bottom: 1rem;
-    justify-content: space-between;
     width: 100%;
     align-items: center;
 }
 
+.to-do-element {
+    justify-content: center;
+}
+
 .view-task, .view-reward {
-    width: 85%;
+    min-width: 12rem;
+    max-width: 15rem;
     display: flex;
     align-items: center;
     height: fit-content;
@@ -15,7 +19,6 @@
     border: none;
     border-radius: .4rem;
     background-color: #97c8ed;
-    width: 100%;
     color: #135382;
     font-family: "Nunito", sans-serif;
     font-size: 1rem;
@@ -24,8 +27,56 @@
    
 }
 
+.view-task {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 
 .view-task:hover, .view-reward:hover {
     font-size: 1.1rem;
     color: #0c3d63;
+}
+
+.deadline-details {
+    margin: 0;
+    font-size: .5rem;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.status-box {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.status-box p {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    font-weight: bolder;
+}
+
+#overdue-text {
+    color: red;
+    font-weight: bolder;
+    font-size: 1rem;
+    margin: 0;
+}
+
+#task-name-text {
+    margin: 0;
+    text-align: start;
+}
+
+.coin-penalty-box {
+    display: flex;
+    align-items: center;
+}
+
+#completed-text {
+    color: green;
 }
