--- a/src/features/Pomodoro/Timer/Timer.css
+++ b/src/features/Pomodoro/Timer/Timer.css
@@ -5,7 +5,7 @@
 .control-timer-buttons {
     margin-top: 2rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .play-button {
