--- a/src/features/Pomodoro/Settings/Settings.css
+++ b/src/features/Pomodoro/Settings/Settings.css
@@ -1,7 +1,9 @@
 .pomodoro-settings-container label{
-  display: block;
+  display: flex;
   margin-top: 2rem;
   margin-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .slider {
