Fix css, layout, and overdue tasks

--- a/src/features/Navigation/Navigation.css
+++ b/src/features/Navigation/Navigation.css
@@ -3,7 +3,7 @@
     top: 0;
     width: 100%;
     background-color: #0c3d63; /* Adjust as needed */
-    padding: 15px 0; /* Adjust padding as needed */
+    padding: 1rem; /* Adjust padding as needed */
     height: 1.5rem;
 }
 
