--- a/src/features/Inventory/InventoryPage.css
+++ b/src/features/Inventory/InventoryPage.css
@@ -4,12 +4,17 @@
     align-items: center;
     width: fit-content;
     height: fit-content;
-    margin-top: 2rem;
     background-color: #135382;
 }
 
-.inventory-box h1, .inventory-empty-message {
+.inventory-box h1 {
     padding: 0;
-    margin-top: 0;
+    margin: 0;
+    font-size: 2rem;
     color: aliceblue;
+}
+
+.inventory-empty-message {
+    color: aliceblue;
+    margin-top: 0;
 }
