--- a/src/features/Pomodoro/Settings/Settings.css
+++ b/src/features/Pomodoro/Settings/Settings.css
@@ -1,21 +1,34 @@
-.pomodoro-settings-container label{
-  display: flex;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-    justify-content: center;
+.pomodoro-settings-container {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
+.pomodoro-settings-container label {
+    display: flex;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
+    color: #135382;
+}
+
 .slider {
-    height: 40px;
-    border: 2px solid lightblue;
+    height: 35px;
+    border: 2px solid #135382;
     border-radius: 20px;
+    width: 80%;
 }
 
 .thumb {
-    background-color: lightblue;
+    background-color: #135382;
     cursor: pointer;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     border-radius: 20px;
+}
+
+.pomodoro-settings-done {
+    margin-top: 2rem;
 }
