--- a/src/features/Pomodoro/Timer/Timer.css
+++ b/src/features/Pomodoro/Timer/Timer.css
@@ -1,11 +1,12 @@
-.pomodoro-container {
-    background-color: #135382;
+.circular-progressbar-wrapper {
+    margin-top: .5rem;
 }
 
+
 .control-timer-buttons {
-    margin-top: 2rem;
     display: flex;
     justify-content: space-between;
+    margin-top: 1em;
 }
 
 .play-button {
@@ -18,10 +19,36 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-
     cursor: pointer;
 }
 
 .control-icon {
     font-size: 2rem;
 }
+
+.pomodoro-button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: aliceblue;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    width: 4rem;
+    font-size: 1rem;
+    display: inline-flex;
+}
+
+.pomodoro-button:hover, .pomodoro-button {
+    font-size: 1.2rem;
+}
+
+.pomodoro-icon {
+    margin-bottom: .3rem;
+    margin-right: .5rem;
+}
+
+#mode-string {
+    color: aliceblue;
+}
+
