--- a/src/sharedStyles/sharedStyles.css
+++ b/src/sharedStyles/sharedStyles.css
@@ -30,3 +30,97 @@
     align-items: center;
     justify-content: center;
 }
+
+.coin-count-header {
+   margin-bottom: .5rem;
+
+    /* Add padding for spacing */
+    text-align: center;
+    /* Center align text */
+    border-radius: 2rem;
+        /* Add shadow */
+}
+
+.coin-count-header h1 {
+    font-size: 1.5rem;
+    /* Adjust font size */
+    font-weight: bold;
+    /* Make the text bold */
+    /* Text color */
+    text-transform: uppercase;
+    /* Convert text to uppercase */
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    /* Remove margin to avoid extra spacing */
+    /* Add any additional styling to make it creative */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.coin-icon {
+    color: #d4af37;
+    margin-right: .5rem;
+}
+
+.overlay, .overdue-task-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Semi-transparent black overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    /* Ensure it appears above other content */
+}
+
+.overlay-card {
+    padding: 2rem 2rem;
+}
+
+.negative-coins {
+    color: #c11b1d;
+}
+
+.task-history-icon, .inventory-link, .inventory-history-icon {
+    position: fixed;
+    top: 4rem;
+    right: 0;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+
+
+.history-icon {
+    display: flex;
+    align-items: center;
+    font-size: 3rem;
+    color: lightblue;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.back-icon {
+    position: fixed;
+    top: 3rem;
+    left: 0rem;
+    margin-top: 20px;
+    margin-left: 20px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-size: 3rem;
+    color: lightblue;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+
