--- a/src/features/Rewards/RewardItem/RewardItem.css
+++ b/src/features/Rewards/RewardItem/RewardItem.css
@@ -2,7 +2,18 @@
     display: flex;
     height: fit-content;
     align-items: center;
-    justify-content: space-between;
+    width: 100%;
+    min-height: 5rem;
+    min-width: 17rem;
+    max-width: 20rem;
+    cursor: pointer;
+    border: none;
+    border-radius: .4rem;
+    color: #135382;
+    font-family: "Nunito", sans-serif;
+    font-size: 1rem;
+    background: linear-gradient(to bottom right, aliceblue, #6fa8dc);
+    padding: .5rem;
 }
 
 .view-reward p {
@@ -11,16 +22,21 @@
     text-align: start;
 }
 
+.icon-container {
+    margin-right: 0;
+}
+
 .view-reward img {
     height: 2.5rem;
     width: 2.5rem;
 }
 
 .reward-details {
-    margin-left: 1rem;
+    margin-left: 0.5rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    min-width: 4rem;
 }
 
 .reward-item {
@@ -39,10 +55,11 @@
 }
 
 .reward-quantity {
-    margin-left: 4rem;
+    margin-left: auto;
     font-size: .8rem;
 }
 
 #reward-quantity {
     text-align: end;
+    padding-right: .5rem;
 }
