--- a/src/features/Inventory/RewardHistory/RewardHistory.css
+++ b/src/features/Inventory/RewardHistory/RewardHistory.css
@@ -1,7 +1,13 @@
 .rewards-history {
-    margin-top: 1rem;
     background-color: #135382;
     color: lightblue
+}
+
+.rewards-history h1 {
+    font-size: 2rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    color: aliceblue;
 }
 
 .inventory-history-box {
@@ -9,7 +15,6 @@
     display: flex;
     align-items: center;
     height: fit-content;
-    cursor: pointer;
     border: none;
     border-radius: .4rem;
     background-color: #97c8ed;
