--- a/src/features/Tasks/TaskForm/TaskForm.css
+++ b/src/features/Tasks/TaskForm/TaskForm.css
@@ -1,11 +1,12 @@
 .form-container {
     background-color: aliceblue;
-    padding: 20px;
+    padding: 2rem;
     border-radius: .5rem;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: fit-content;
+    min-width: 20rem;
     height: fit-content;
 }
 
@@ -25,11 +26,15 @@
 }
 
 .form-container label {
-    width: 70%;
     text-align: start;
 }
 
-.form-container input, #deadline {
+.task-form-label {
+    width: 70%;
+    margin-top: 1.5rem;
+}
+
+#deadline {
     margin-bottom: 1.5rem;
 }
 
@@ -45,10 +50,6 @@
     box-sizing: border-box;
 }
 
-
-#coin-reward {
-    margin-bottom: 1rem;
-}
 
 .submit-task-button {
     width: fit-content;
@@ -75,3 +76,31 @@
     align-items: center;
     cursor: pointer;
 }
+
+.react-calendar {
+    background-color: aliceblue;
+  }
+  
+  /* Color of all dates */
+  .react-calendar button {
+    color: #135382;
+  }
+  
+  /* Color of text, including navigation buttons */
+  .react-calendar .react-calendar__navigation button {
+    color: #135382;
+  }
+  
+  .react-calendar .react-calendar__month-view__days__day--weekend {
+    color: #135382 !important; /* Override weekend specific styles if necessary */
+  }
+  
+  /* Background color of the selected date */
+  .react-calendar__tile--active {
+    background-color: lightblue !important;
+    color: #135382 !important;
+  }
+
+  #text-field {
+    width: 50%;
+  }
