--- a/src/features/Rewards/ItemForm/ItemForm.css
+++ b/src/features/Rewards/ItemForm/ItemForm.css
@@ -1,5 +1,6 @@
 .icon-choices {
     margin-bottom: 1rem;
+    width: 400px;
 }
 
 .icon-choices button {
@@ -11,4 +12,17 @@
 
 .icon-choices button.selected {
     background-color: lightblue;
+}
+
+
+.reward-form-container {
+    background-color: aliceblue;
+    padding: 2rem;
+    border-radius: .5rem;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    min-width: 20rem;
+    height: fit-content;
 }
