--- a/src/sharedStyles/sharedStyles.css
+++ b/src/sharedStyles/sharedStyles.css
@@ -1,6 +1,6 @@
 .command-button {
     border: none;
-    background-color: lightblue;
+    background-color: #95c6f5;
     border-radius: 3rem;
     padding: 1rem;
     margin-left: 1rem;
