Add Cancel in pomodoro settings

--- a/src/features/Pomodoro/Settings/Settings.css
+++ b/src/features/Pomodoro/Settings/Settings.css
@@ -29,6 +29,6 @@
     border-radius: 20px;
 }
 
-.pomodoro-settings-done {
-    margin-top: 2rem;
+.command-buttons-container {
+    margin-top: 1.5rem;
 }
