Implent spend more rewards at once

--- a/src/features/Inventory/ViewInventoryItem/ViewInventoryItem.css
+++ b/src/features/Inventory/ViewInventoryItem/ViewInventoryItem.css
@@ -7,3 +7,12 @@
     margin-right: 1rem;
     cursor: pointer;
 }
+
+.quantity-container {
+    margin-bottom: 1.5rem;
+}
+
+.quantity-input {
+    width: 2rem;
+    margin-left: 1rem;
+}
