--- a/src/features/Tasks/TaskItem/TaskItem.css
+++ b/src/features/Tasks/TaskItem/TaskItem.css
@@ -40,7 +40,7 @@
     min-width: 12rem;
     max-width: 15rem;
     background-color: #135382;
-    border: none;
+    border: 1px solid #6fa8dc;
     color: aliceblue;
     font-family: "Nunito", sans-serif;
     font-size: 1rem;
