--- a/src/sharedStyles/sharedStyles.css
+++ b/src/sharedStyles/sharedStyles.css
@@ -1,8 +1,8 @@
 .command-button {
     border: none;
     background-color: #91c5f2;
-    border-radius: 3rem;
-    padding: 1rem;
+    border-radius: 1rem;
+    padding: .8rem;
     margin-left: 1rem;
     margin-right: 1rem;
     cursor: pointer;
@@ -10,6 +10,7 @@
     min-width: 5rem;
     width: fit-content;
     align-self: center;
+    margin-top: .5rem;
 }
 
 .price-details {
@@ -30,6 +31,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 0;
 }
 
 .coin-count-header {
