--- a/src/sharedStyles/sharedStyles.css
+++ b/src/sharedStyles/sharedStyles.css
@@ -31,7 +31,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .coin-count-header {
@@ -91,12 +92,13 @@
 }
 
 .task-history-icon, .inventory-link, .inventory-history-icon {
-    position: fixed;
-    top: 4rem;
+    position: absolute;
+    top: 4.5rem;
     right: 0;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
+    margin-right: .5rem;
+    border-radius: 50%;
+    padding: .5rem;
+    
 }
 
 
@@ -108,14 +110,13 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+    
 }
 
 .back-icon {
     position: fixed;
-    top: 3rem;
-    left: 0rem;
-    margin-top: 20px;
-    margin-left: 20px;
+    top: 4.5rem;
+    margin-left: 1rem;
     justify-content: center;
     display: flex;
     align-items: center;
@@ -126,4 +127,111 @@
     cursor: pointer;
 }
 
+.add-task,
+.add-reward {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-bottom: .5rem;
+    margin-right: .6rem;
+    font-size: 4rem;
+    padding: 0;
+    user-select: none;
+}
 
+.add-task button,
+.add-reward button {
+    display: flex;
+    align-items: center;
+    font-size: 4rem;
+    color: lightblue;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    padding: .15rem;
+    user-select: none;
+    border-radius: 50%;
+}
+
+
+
+.add-icon {
+    padding: 0;
+}
+.add-button svg {
+    -webkit-tap-higlight-color: transparent;
+    padding: 0;
+}
+
+.no-select {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+
+@media (max-width: 350px) {
+    .task-history-icon {
+        margin-right: .25rem;
+    }
+
+    .history-icon {
+        font-size: 2.5rem;
+    }
+
+    .add-task button {
+        font-size: 3.5rem;
+    }
+
+    .add-task {
+        margin-right: 0;
+    }
+
+    .back-icon {
+        margin-left: .25rem;
+        font-size: 2.5rem;
+    }
+
+    .overlay-card {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
+/* Screens that have hover and are not Samsung (laptops etc) */
+@media (hover:hover) and (min-width: 501px) {
+    .add-task button:active {
+        background-color: #0c3d63;
+    }
+
+    .task-history-icon:active {
+        background-color: #0c3d63;
+    }
+}
+
+/* Screens that don't have hover (most mobile devices except Samsung) */
+/* :hover behaves as active */
+@media (hover: none) {
+    .add-task button:hover {
+        background-color: #0c3d63;
+    }
+
+    .task-history-icon:hover {
+        background-color: #0c3d63;
+    }
+
+}
+
+
+/*Samsung screens that have hover but don't behave like they do */
+@media (hover:hover) and (max-width: 500px) {
+   
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    
+}
