--- a/src/features/Tasks/TasksPage.css
+++ b/src/features/Tasks/TasksPage.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60%;
+    width: 100%;
     height: fit-content;
     margin-top: 2rem;
     background-color: #135382;
@@ -12,15 +12,27 @@
     font-size: 2rem;
     font-weight: bold;
     color: aliceblue;
-    text-transform: uppercase;
     margin: 0;
+    width: fit-content;
+    text-transform: uppercase;
+}
+
+.date-box {
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
 }
 
-.to-do-list {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
+#date {
+    margin-left: .5rem;
+}
+
+
+
+.todo-list {
+    margin-right: 2.25rem;
 }
 
 .view-task {
@@ -30,24 +42,6 @@
 }
 
 
-.add-task, .add-reward {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    margin-bottom: 20px;
-    margin-right: 20px;
-}
-
-.add-task button, .add-reward button {
-    display: flex;
-    align-items: center;
-    font-size: 4rem;
-    color: lightblue;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
 .edit-task-icon {
     font-size: 1.2em;
 }
@@ -56,7 +50,8 @@
     font-size: 1.3em;
 }
 
-.overlay, .overdue-task-overlay {
+.overlay,
+.overdue-task-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -71,3 +66,61 @@
     /* Ensure it appears above other content */
 }
 
+@media (max-width: 300px) {
+    .date-box h1 {
+        font-size: 1.4rem
+    }
+}
+
+
+@media (min-width: 301px) and (max-width: 400px) {
+  
+    .date-box {
+        align-self: center;
+    }
+
+    .coin-count-header {
+        align-self: center;
+    }
+
+    .date-box h1 {
+        font-size: 1.6rem;
+    }
+}
+
+@media (min-width: 401px) and (max-width: 545px) {
+    #date {
+        margin-left: 0;
+    }
+
+    .date-box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .date-box h1 {
+        font-size: 1.8rem;
+    }
+}
+
+/* Screens that have hover and are not Samsung (laptops etc) */
+@media (hover:hover) and (min-width: 501px) {
+    
+}
+
+/*Screens that don't have hover (most mobile devices except Samsung) */
+@media (hover: none) {
+    
+
+}
+
+
+/*Samsung screens that have hover but don't behave like they do */
+@media (hover:hover) and (max-width: 500px) {
+   
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    
+}
