--- a/src/features/Pomodoro/PomodoroPage.css
+++ b/src/features/Pomodoro/PomodoroPage.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     color: aliceblue;
+    width: 70%;
 }
 
 .pomodoro-container h1 {
@@ -17,19 +18,102 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
-    position: fixed;
-    top: 4rem;
+    position: absolute;
+    top: 4.5rem;
     right: 0;
-    margin-bottom: 20px;
-    margin-right: 20px;
+    border-radius: 50%;
+    margin-right: .5rem;
+    padding: 0;
+    display: flex;
+    align-items: center;
 }
 
 .settings-icon {
-    font-size: 3rem;
+    font-size: 4rem;
     color: lightblue;
+    border-radius: 50%;
+    padding: 0;
 }
 
 
 #sessions-remaining {
     margin-top: 2em;
+    margin-bottom: 0;
+}
+
+
+@media (max-width: 300px) {
+    #pomodoro-header {
+        font-size: 1.4rem
+    }
+}
+
+
+@media (max-width: 350px) {
+    .settings-icon {
+        font-size: 3rem;
+    }
+
+    .pomodoro-coin-count {
+        display: none;
+    }
+
+    #pomodoro-header {
+        display: none;
+    }
+
+}
+
+
+@media (max-width: 1200px) and (max-height: 900px) {
+
+    .pomodoro-coin-count {
+        display: none;
+    }
+
+    #pomodoro-header {
+        display: none;
+    }
+
+    #sessions-remaining {
+        margin-top: 1.5rem;
+    }
+
+    .pomodoro-container {
+        margin-top: 1.5rem;
+    }
+    
+}
+
+@media (min-width: 401px) and (max-width: 545px) {
+
+    #pomodoro-header {
+        font-size: 1.8rem;
+    }
+    
+}
+
+
+/* Screens that have hover and are not Samsung (laptops etc) */
+@media (hover:hover) and (min-width: 501px) {
+   .settings-button:active {
+    background-color: #0c3d63;
+   }
+}
+
+/* Screens that don't have hover (most mobile devices except Samsung) */
+/* :hover behaves as active */
+@media (hover: none) {
+    .settings-button:hover {
+        background-color: #0c3d63;
+       }
+   
+}
+
+
+/*Samsung screens that have hover but don't behave like they do */
+@media (hover:hover) and (max-width: 500px) {
+    .settings-button:active {
+        background-color: #0c3d63;
+       }
 }
