--- a/src/features/Pomodoro/Timer/Timer.css
+++ b/src/features/Pomodoro/Timer/Timer.css
@@ -26,6 +26,31 @@
     font-size: 2rem;
 }
 
+.coin-pomodoro-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+}
+
+#pomodoro-coin-p {
+       display: none; 
+}
+
+
+.coin-pomodoro-box p {
+    margin: 0;
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+}
+.pomodoro-coin-icon {
+    margin-right: .5rem;
+    color: #d4af37;
+    font-size: 1.4rem;
+}
+
 .pomodoro-button {
     background-color: transparent;
     border: none;
@@ -37,6 +62,7 @@
     width: 4rem;
     font-size: 1rem;
     display: inline-flex;
+    padding: .5rem 1rem;
 }
 
 .pomodoro-button:hover, .pomodoro-button {
@@ -45,10 +71,54 @@
 
 .pomodoro-icon {
     margin-bottom: .3rem;
-    margin-right: .5rem;
+    margin-right: .3rem;
 }
 
 #mode-string {
     color: aliceblue;
 }
 
+/* Screens that have hover and are not Samsung (laptops etc) */
+@media (hover:hover) and (min-width: 501px) {
+    .play-button:active {
+     background-color: #91cbf2;
+    }
+
+  
+    .pomodoro-button:active {
+        background-color: #91cbf2;
+        color: #0c3d63;
+    }
+ }
+ 
+ /* Screens that don't have hover (most mobile devices except Samsung) */
+ /* :hover behaves as active */
+ @media (hover: none) {
+    .play-button:active {
+        background-color: #91cbf2;
+       }
+    
+ }
+ 
+ 
+ /*Samsung screens that have hover but don't behave like they do */
+ @media (hover:hover) and (max-width: 500px) {
+    .play-button:active {
+        background-color: #91cbf2;
+       }
+ }
+
+ @media (max-width: 1200px) and (max-height: 900px) {
+    .control-timer-buttons {
+        margin-top: 0;
+    }
+    
+    #mode-string {
+        margin-bottom: 0;
+    }
+
+    #pomodoro-coin-p {
+        display: flex;
+    }
+
+ }
